<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/download_all_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/download_option_button_margin"
        android:layout_marginEnd="@dimen/download_option_description_padding"
        android:layout_marginRight="@dimen/download_option_description_padding"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/download_all_text"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/select_photos_btn"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/select_photos_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/download_option_description_padding"
        android:layout_marginLeft="@dimen/download_option_description_padding"
        android:layout_marginTop="@dimen/download_option_button_margin"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/select_photos_text"
        android:textColor="@color/colorPrimary"
        app:layout_constraintLeft_toRightOf="@+id/download_all_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/download_option_description_padding"
        android:text="@string/fb_backup_text"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/download_option_title_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/download_option_description_padding"
        android:text="@string/select_download_text"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/download_option_description_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>